- aggressively_penalize_bankruptcy now alternates between selling buildings or disbanding units first for bankrupt AI players and every third turn cuts their research spending
- Fix crash caused by failure to find default option for popup asking player to select new build in city that completed its previous one
- Except nuclear weapons from disallow_useless_bombard_vs_airfields

* RELEASE 26
- Add some options to make land transports viable, controlled by land_transport_rules setting
  - LTs may be loaded into naval transports
  - Empty LTs may join armies
  - Units inside an LT may be prevented from defending their tile, performing defensive bombard, or intercepting air units
  - Units inside an LT can be destroyed when the LT itself is destroyed or captured
- Add resource placement settings
  - allow_adjacent_resources_of_different_types relaxes a rule preventing resources from appearing next to others of a different type
  - luxury_randomized_appearance_rate_percent controls the overall appearance rate for luxuries that do not have a fixed rate set
  - tiles_per_non_luxury_resource controls the overall appearance rate of bonus resources
- Add option allow_sale_of_small_wonders
- Add option allow_unload_from_army
- Option to prevent land anti-air units from intercepting overflying aircraft while they're loaded in a naval transport
  - Named no_land_anti_air_from_inside_naval_transport
- Option to prevent units from being enslaved after being destroyed by lethal bombard named prevent_enslaving_by_bombardment
- Fix era-specific civ formal names not appearing on espionage screen
- Put rule stopping land units inside transports from exerting zone of control behind special ZoC setting "not-from-inside"
  - Previously this rule change could not be turned off by the config
- Polish districts
  - Prevent districts from being built on natural wonders (regression bug)
  - Fix minimum tile count distance between natural wonders